# coverage-symlink-reproduction

./: .gitignore
top/ext/: common.py
top/package1/: pyproject.toml  tox.ini
top/package1/test_project/: common.py
top/package1/tests/: test_sanity.py
